--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li>Milestones are a crucial aspect of SODC, allowing for team accomplishments to be celebrated. Whether the milestone was completed or not, the aim is to allow for an empirical study of the current SODC process being implemented.</li>
     <li>A transparent and open process between all aspects of the development cycle is expected. Ensuring research, design, implementation, etc… are all working together and not against each other.</li>
     <li>For SODC to be effective, it is important to collaborate with the wider open source ecosystem. Separate teams working on similar, dependent or complementary works should collaborate and share knowledge for the benefit of the larger community and in turn as members of the community help themselves optimize their development cycles.</li>
+    <li>In SODC teams operate by respect, not rank.</li>
 </p>
 
       <h3><strong>Contributors</strong></h3>
