--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li>A transparent and open process between all aspects of the development cycle is expected. Ensuring research, design, implementation, etc… are all working together and not against each other.</li>
     <li>For SODC to be effective, it is important to collaborate with the wider open source ecosystem. Separate teams working on similar, dependent or complementary works should collaborate and share knowledge for the benefit of the larger community and in turn as members of the community help themselves optimize their development cycles.</li>
     <li>In SODC teams operate by respect, not rank.</li>
+    <li>Teams must come to consensus on the definition of done, for clear outcomes to be understood by the entire team.</li>
 </p>
 
       <h3><strong>Contributors</strong></h3>
